# Conduit-PythonSDK

./: Makefile  README.md  packaging.md  requirements.txt  setup.cfg
src/conduit_pkg/: client.py  conduit.py  query.py
tests/conduit_pkg/: test_client.py  test_conduit.py
tests/conduit_pkg/fixtures/: execute.json  getAllMetadata.json  getTableSchema.json  getTables.json
