[metadata]
# replace with your username:
name = conduit-pkg-ahplummer
version = 0.0.1
author = Allen Plummer
author_email = ahplummer@gmail.com
description = Python SDK for Conduit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BlueprintConsulting/Conduit-PythonSDK
project_urls =
    Bug Tracker = https://github.com/BlueprintConsulting/Conduit-PythonSDK/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src